competencia2/Programa13/ExprParser.py
# Generated from ./Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREATE'", "'TABLE'", "'PRIMARY'", "'KEY'", 
                     "'NOT'", "'NULL'", "'INSERT'", "'INTO'", "'VALUES'", 
                     "'SELECT'", "'FROM'", "'INNER'", "'JOIN'", "'ON'", 
                     "'WHERE'", "'SERIAL'", "'VARCHAR'", "'INTEGER'", "'DATE'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='", "'.'", 
                     "';'", "','", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "CREATE", "TABLE", "PRIMARY", "KEY", 
                      "NOT", "NULL", "INSERT", "INTO", "VALUES", "SELECT", 
                      "FROM", "INNER", "JOIN", "ON", "WHERE", "SERIAL", 
                      "VARCHAR", "INTEGER", "DATE", "NUM", "CADENA", "ID", 
                      "IGUAL", "PUNTO", "PUNTO_COMA", "COMA", "PAR_IZQ", 
                      "PAR_DER", "WS" ]

    RULE_root = 0
    RULE_expr = 1

    ruleNames =  [ "root", "expr" ]

    EOF = Token.EOF
    CREATE=1
    TABLE=2
    PRIMARY=3
    KEY=4
    NOT=5
    NULL=6
    INSERT=7
    INTO=8
    VALUES=9
    SELECT=10
    FROM=11
    INNER=12
    JOIN=13
    ON=14
    WHERE=15
    SERIAL=16
    VARCHAR=17
    INTEGER=18
    DATE=19
    NUM=20
    CADENA=21
    ID=22
    IGUAL=23
    PUNTO=24
    PUNTO_COMA=25
    COMA=26
    PAR_IZQ=27
    PAR_DER=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_root




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 4
            self.expr()
            self.state = 5
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_expr




    def expr(self):

        localctx = ExprParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 7
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





